[#308] Sluggish issue liên quan đến thêm block vào list
Khi thêm nhiều block vào trong 1 list, list đó bị thay đổi chiều cao theo list box, dẫn đến việc UI bị sluggish, virtual panel không được kích hoạt

--- a/SPRNetTool/View/Pages/PakEditorPage.xaml
+++ b/SPRNetTool/View/Pages/PakEditorPage.xaml
@@ -391,7 +391,8 @@
 						 ItemsSource="{Binding CurrentSelectedPakFile.PakBlocks}"
 						 VirtualizingStackPanel.IsVirtualizing="True"
 						 VirtualizingStackPanel.VirtualizationMode="Recycling"
-						 ScrollViewer.CanContentScroll="True">
+						 ScrollViewer.CanContentScroll="True"
+						 Height="{Binding ActualHeight, RelativeSource={RelativeSource AncestorType=Grid}}">
 					<ListBox.ItemContainerStyle>
 						<Style TargetType="ListBoxItem">
 							<Setter Property="Template">
